# MotifPairMeth

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  data.rs  fasta_reader.rs  main.rs  pileup.rs  sequence.rs
src/lib/: iupac.rs  motif.rs
src/utils/: mod.rs  modtype.rs  motif.rs  strand.rs
